@@ -8,21 +8,18 @@ import com.pli.codes.platepal.cookbook.model.dto.RecipeResponseDto;
 import com.pli.codes.platepal.cookbook.model.entity.Recipe;
 import com.pli.codes.platepal.cookbook.model.mapper.RecipeMapper;
 import com.pli.codes.platepal.cookbook.model.repository.IngredientRepository;
-import com.pli.codes.platepal.cookbook.model.repository.RecipeIngredientListRepository;
-import com.pli.codes.platepal.cookbook.model.repository.RecipeIngredientRepository;
-import com.pli.codes.platepal.cookbook.model.repository.RecipeNoteRepository;
 import com.pli.codes.platepal.cookbook.model.repository.RecipeRepository;
-import com.pli.codes.platepal.cookbook.model.repository.RecipeStepRepository;
-import com.pli.codes.platepal.cookbook.model.repository.RecipeTagRepository;
 import java.security.Principal;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -36,28 +33,15 @@ public class RecipeController {
 
     private final RecipeRepository repository;
     private final IngredientRepository ingredientRepository;
-    private final RecipeIngredientRepository recipeIngredientRepository;
-    private final RecipeIngredientListRepository recipeIngredientListRepository;
-    private final RecipeNoteRepository recipeNoteRepository;
-    private final RecipeStepRepository recipeStepRepository;
-    private final RecipeTagRepository recipeTagRepository;
     private final AccountRepository accountRepository;
 
     public RecipeController(
         RecipeRepository repository,
         IngredientRepository ingredientRepository,
-        RecipeIngredientRepository recipeIngredientRepository,
-        RecipeIngredientListRepository recipeIngredientListRepository, RecipeNoteRepository recipeNoteRepository,
-        RecipeStepRepository recipeStepRepository, RecipeTagRepository recipeTagRepository,
         AccountRepository accountRepository
     ) {
         this.repository = repository;
         this.ingredientRepository = ingredientRepository;
-        this.recipeIngredientRepository = recipeIngredientRepository;
-        this.recipeIngredientListRepository = recipeIngredientListRepository;
-        this.recipeNoteRepository = recipeNoteRepository;
-        this.recipeStepRepository = recipeStepRepository;
-        this.recipeTagRepository = recipeTagRepository;
         this.accountRepository = accountRepository;
     }
 
@@ -66,8 +50,7 @@ public class RecipeController {
     public ResponseEntity<List<RecipeDtoSmall>> getRecipesSmall(Principal principal) {
         Account account = accountRepository.findByEmailAddress(principal.getName()).orElseThrow();
         List<Recipe> recipes = repository.findByCreatedBy(account.getAccountId(), PageRequest.of(0, 5));
-        List<RecipeDtoSmall> dtos = recipes.stream().map(RecipeMapper.INSTANCE::toDtoSmall)
-            .collect(Collectors.toList());
+        List<RecipeDtoSmall> dtos = recipes.stream().map(RecipeMapper.INSTANCE::toDtoSmall).toList();
         return ResponseEntity.ok(dtos);
     }
 
@@ -91,14 +74,43 @@ public class RecipeController {
         Recipe recipe = RecipeMapper.INSTANCE.toEntity(requestDto, ingredientRepository);
         recipe.setCreatedBy(account.getAccountId());
         repository.save(recipe);
-        recipeIngredientListRepository.saveAll(recipe.getRecipeIngredientLists());
-        recipe.getRecipeIngredientLists().forEach(
-            recipeIngredientList -> recipeIngredientRepository.saveAll(recipeIngredientList.getRecipeIngredients())
-        );
-        recipeNoteRepository.saveAll(recipe.getRecipeNotes());
-        recipeStepRepository.saveAll(recipe.getRecipeSteps());
-        recipeTagRepository.saveAll(recipe.getRecipeTags());
-
         return ResponseEntity.ok(RecipeMapper.INSTANCE.toDto(recipe));
+    }
+
+    @PatchMapping("/{id}")
+    public ResponseEntity<RecipeResponseDto> getRecipe(
+        @PathVariable Long id,
+        @RequestBody RecipeRequestDto requestDto,
+        Principal principal
+    ) {
+        Account account = accountRepository.findByEmailAddress(principal.getName()).orElseThrow();
+        Optional<Recipe> byId = repository.findById(id);
+        if (byId.isPresent()) {
+            Recipe recipe = byId.get();
+            if (Objects.equals(recipe.getCreatedBy(), account.getAccountId())) {
+                RecipeMapper.INSTANCE.partialUpdate(requestDto, recipe, ingredientRepository);
+                repository.save(recipe);
+                return ResponseEntity.ok(RecipeMapper.INSTANCE.toDto(recipe));
+            } else {
+                return new ResponseEntity<>(HttpStatus.UNAUTHORIZED);
+            }
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteRecipe(@PathVariable Long id, Principal principal) {
+        Account account = accountRepository.findByEmailAddress(principal.getName()).orElseThrow();
+        Optional<Recipe> byId = repository.findById(id);
+        if (byId.isPresent()) {
+            Recipe recipe = byId.get();
+            if (Objects.equals(recipe.getCreatedBy(), account.getAccountId())) {
+                repository.delete(recipe);
+                return new ResponseEntity<>(HttpStatus.ACCEPTED);
+            } else {
+                return new ResponseEntity<>(HttpStatus.UNAUTHORIZED);
+            }
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_FOUND);
     }
 }
